# ModuloBaseController

./: CMakeLists.txt  ConversionMovimientoDiscreto.cpp  ConversionMovimientoDiscreto.h  MovimientoDiscreto.hpp  main.cpp
